# easylabel

./: CMakeLists.txt  LICENSE  README.md
scripts/: get_tutorial_data.sh
src/apps/: CMakeLists.txt  accu_proc.cpp  diff_proc.cpp  pcd2img_proc.cpp  remove_proc.cpp
src/easylabel/: depth_accumulator.cpp  depth_accumulator.h  depth_differ.cpp  depth_differ.h  label_helper.cpp  label_helper.h
src/ext/: CMakeLists.txt
src/ext/v4r/io/include/: filesystem.h
src/ext/v4r/io/src/: filesystem.cpp
